# axilgen

./: LICENSE  README.md  pyproject.toml
src/axilgen/: __init__.py  __main__.py
src/axilgen/modules/: __init__.py  invoke_parameters.py  parse_file.py
